css/style.css
h1{
    color: white;
}

.bg{
     height:100%;
    background: linear-gradient(0deg, #000000, #05a9ca 80%) no-repeat;
}

.card:hover{
 transform: scale(1.1);
}
.card-footer{
     border: 0
}
.button{
     border: 0
}

#relaxButton{
   
    background-image: linear-gradient(to right, #16A085 0%, #F4D03F  51%, #16A085  100%);

    transition: 0.5s;
    background-size: 200% auto;
    color: white;      
 
}
#relaxButton:hover{
   
    background-position: right center; 
    color: #fff;
    text-decoration: none;
}

#socialButton{
  background-image: linear-gradient(to right, #4776E6 0%, #8E54E9  51%, #4776E6  100%);

    transition: 0.5s;
    background-size: 200% auto;
    color: white;  
    
}

#socialButton:hover{
    background-position: right center; 
    color: #fff;
    text-decoration: none;
}

#diyButton{

    background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%);
    transition: 0.5s;
    background-size: 200% auto;
    color: white;            
}
#diyButton:hover{

    background-position: right center; 
    color: #fff;
    text-decoration: none;
}

      
         
    
     
    

